Additions
- Added JEI Support for removing upgrades.
- Added JEI Support for descriptions of the backpacks.
- Added JEI Support for increasing the tier of a backpack.

Changes
- Redid the config file to make it much more aesthetically pleasing.
- Minor recipe tweaks.

Bug Fixes
- Fixed configurable/alternate gui not initializing on first right click.
------------------------------------------------------
Version 1.8.9 - 2.0.4
------------------------------------------------------
Additions
- Added JEI support for adding upgrades, fancy!

Changes
- None

Bug Fixes
- Fixed backpack tier upgrade recipe not getting the correct one when upgrading the basic backpack to a speciality
    - Closes #50
- Fixed adding upgrade recipes ignoring tiers
------------------------------------------------------
Version 1.8.9 - 2.0.3
------------------------------------------------------
Additions
- None

Changes
- The restocking upgrade no longer sorts the backpack when restocking.
    - Temporary "bug" introduced, where if you pick up items on the ground that are larger than the stack to resupply and you have a filter they will go in the filter and not resupply.
    - You don't lose any items, and it is a specific uncommon-ish case, but the player has to pick something up to actually resupply in that case, which isn't ideal. Will be fixed in next version.

Bug Fixes
- The Nesting Upgrade should actually work properly now.
------------------------------------------------------
Version 1.8.9 - 2.0.2
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Fixed forge gradle not reobfuscating for some unknown reason O.o
    - Closes #47
------------------------------------------------------
Version 1.8.9 - 2.0.1
------------------------------------------------------
Additions
- None

Changes
- The backpack is less visible/obtrusive if in first person perspective.