@@ -168,6 +168,7 @@ public class BackpackAddUpgradeRecipe extends ShapelessOreRecipe implements IAdd
             }
 
             if (ItemUpgradeRegistry.isInstanceOfConflictingUpgrade(upgradeToApply)){ //conflicting
+                System.out.println("conflicting");
                 if (hasConflictingUpgradeInUpgrades(upgradeToApply, upgrades)){ //if has the conflicting upgrade
                     return false; //can't apply conflicting
                 } else { //no conflicting one tried to be applied
